# 6887064_reinforcement_learning

./: README.md  pyproject.toml  requirements.txt  training.ipynb
models/: highway_dqn_model_episode_1000.pth  highway_dqn_model_episode_1200.pth  highway_dqn_model_episode_1400.pth  highway_dqn_model_episode_1600.pth  highway_dqn_model_episode_1800.pth  highway_dqn_model_episode_200.pth  highway_dqn_model_episode_2000.pth  highway_dqn_model_episode_400.pth  highway_dqn_model_episode_600.pth  highway_dqn_model_episode_800.pth  highway_dqn_model_latest.pth
