[project]
name = "6887064-reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.0",
    "highway-env>=1.10.1",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
